# erp

./: .dockerignore  .gitignore  AGENTS.md  BACKLOG.md  Dockerfile  biome.json  claud_plugin_architec.md  deploy.sh  deploy.ts  docker-compose.yml  ecosystem.config.js  operations_example.json  package.json  plugin_architec.md  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  test-one.ts  turbo.json
.husky/: pre-commit
client/: .env.development  .gitignore  codegen.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.sw.json  vite-env.d.ts  vite.config.ts
rust/: Cargo.toml  events_seed.csv  events_seed.json  explanation.md  index.d.ts  index.js  package.json  weights.json
rust/.github/: renovate.json
rust/__test__/: index.spec.ts
rust/dataset/: 1-2026_11009634.tsv  1-2026_11109430.tsv  1-2026_3915699.tsv  1-2026_3917710.tsv  1-2026_3950209.tsv  1-2026_8170321.tsv  1-2026_9224701.tsv  10-2025_3953357.tsv  10-2025_9224662.tsv  11-2025_9224770.tsv  11051237_11-2025.tsv  12-2025_10996559.tsv  12-2025_11009620.tsv  12-2025_8332834.tsv  2-2026_11016445.tsv  2-2026_9224668.tsv  events_seed.csv  events_seed.tsv  events_seed_1.csv  events_seed_2.csv
rust/docs/: aligment.md
rust/src/: csv.rs  dataset.rs  inference.rs  intervaling.rs  lib.rs  normalization.rs  observation.rs  observation_builder.rs  state.rs  time.rs  training.rs  training_data.rs
rust/src/attendance_hmm/: README.md  dataset.rs  inference.rs  intervaling.rs  mod.rs  normalization.rs  observation.rs  state.rs  training.rs  training_data.rs
rust/src/utils/: csv.rs  mod.rs
(+1664 files in other folders)
