
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "test"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
karma = { version = "1.0.0", features = ["serde"] } # Hidden Markov Model
chrono = "0.4.43"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
