
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "test"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
chrono = "0.4.43"
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hmmm = "0.2.0"
rand = "0.7.3"
ndarray = "0.13.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
